# music-ui

./: .env_example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
musiccontrol/: __main__.py  console_app.py  controller.py  web_app.py
musiccontrol/data/: moods.py
musiccontrol/spotify/: player.py  spotify_auth_test.py
musiccontrol/tests/: test_moods.py  test_play_music.py  test_ui.py
musicui/: __main__.py  config.py  console_app.py  controller.py  web_app.py
musicui/data/: moods.py
musicui/spotify/: player.py  spotify_auth_test.py
musicui/tests/: test_console_app.py  test_moods.py
