[tool.poetry]
name = "music-ui"
version = "0.1.0"
description = "Novel UIs for playing recorded music"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.10.1"
spotipy = "^2.23.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
